# platform.core.appfw.wgt-backend

./: AUTHORS  CMakeLists.txt  LICENSE
src/hybrid/: CMakeLists.txt  hybrid_backend_data.h  hybrid_installer.cc  hybrid_installer.h
src/hybrid/step/: step_encrypt_resources.cc  step_encrypt_resources.h  step_merge_tpk_config.cc  step_merge_tpk_config.h  step_parse.cc  step_parse.h  step_stash_tpk_config.cc  step_stash_tpk_config.h
src/hybrid/step/configuration/: step_merge_tpk_config.cc  step_merge_tpk_config.h  step_parse.cc  step_parse.h  step_stash_tpk_config.cc  step_stash_tpk_config.h
src/hybrid/step/encryption/: step_encrypt_resources.cc  step_encrypt_resources.h
src/unit_tests/: CMakeLists.txt  manifest_test.cc  smoke_test.cc  smoke_test_helper.cc
src/unit_tests/test_samples/manifest/ManifestTest.AppControlElement_MissingMIME/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.AppControlElement_MissingOperation/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.AppControlElement_MissingSrc/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.AppControlElement_MissingURI/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.AppControlElement_Valid/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.ApplicationElement_InvalidAppId/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.ApplicationElement_InvalidPackage/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.ApplicationElement_InvalidVersion/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.ApplicationElement_ManyElements/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.ApplicationElement_MissingAppId/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.ApplicationElement_MissingPackage/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.ApplicationElement_MissingVersion/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.CategoryElement_MissingName/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.CategoryElement_MultipleElements/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.CategoryElement_Valid/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.MetadataElement_DuplicateKey/: config.xml
src/unit_tests/test_samples/manifest/ManifestTest.MetadataElement_Valid/: config.xml
src/unit_tests/test_samples/smoke/: ClearMode.wgt  DeinstallationMode.wgt  DeinstallationMode_Hybrid.wgt  DeinstallationMode_Rollback.wgt  DeltaMode.delta  DeltaMode.wgt  DeltaMode_2.wgt  DeltaMode_Hybrid.delta  DeltaMode_Hybrid.wgt  DeltaMode_Hybrid_2.wgt  DisablePkg.wgt  EnablePkg.wgt  InstallationMode.wgt  InstallationMode_GoodSignature.wgt  InstallationMode_Hybrid.wgt  InstallationMode_Rollback.wgt  InstallationMode_WrongSignature.wgt  MountInstallationMode.wgt  MountUpdateMode.wgt  MountUpdateMode_2.wgt  RDSMode.wgt  RecoveryMode_ForInstallation.wgt  RecoveryMode_ForUpdate.wgt  RecoveryMode_ForUpdate_2.wgt  UpdateMode.wgt  UpdateMode_2.wgt  UpdateMode_Hybrid.wgt  UpdateMode_Hybrid_2.wgt  UpdateMode_Rollback.wgt  UpdateMode_Rollback_2.wgt
src/wgt/: CMakeLists.txt  extension_config_parser.cc  extension_config_parser.h  rds_parser.cc  rds_parser.h  wgt_app_query_interface.cc  wgt_app_query_interface.h  wgt_backend.cc  wgt_backend_data.h  wgt_installer.cc  wgt_installer.h
src/wgt/step/: step_add_default_privileges.cc  step_add_default_privileges.h  step_check_hybrid.cc  step_check_hybrid.h  step_check_settings_level.cc  step_check_settings_level.h  step_check_wgt_background_category.cc  step_check_wgt_background_category.h  step_create_symbolic_link.cc  step_create_symbolic_link.h  step_encrypt_resources.cc  step_encrypt_resources.h  step_fail_hybrid.cc  step_fail_hybrid.h  step_generate_xml.cc  step_generate_xml.h  step_install_hybrid.cc  step_install_hybrid.h  step_parse.cc  step_parse.h  step_parse_recovery.cc  step_parse_recovery.h  step_rds_modify.cc  step_rds_modify.h  step_rds_parse.cc  step_rds_parse.h  step_remove_encryption_data.cc  step_remove_encryption_data.h  step_wgt_backup_icons.cc  step_wgt_backup_icons.h  step_wgt_copy_storage_directories.cc  step_wgt_copy_storage_directories.h  step_wgt_create_icons.cc  step_wgt_create_icons.h  step_wgt_create_storage_directories.cc  step_wgt_create_storage_directories.h  step_wgt_patch_icons.cc  step_wgt_patch_icons.h  step_wgt_patch_storage_directories.cc  step_wgt_patch_storage_directories.h  (+6 more)
src/wgt/step/common/: extension_config_parser.cc  extension_config_parser.h  privileges.cc  privileges.h
src/wgt/step/configuration/: step_parse.cc  step_parse.h  step_parse_recovery.cc  step_parse_recovery.h
src/wgt/step/encryption/: step_encrypt_resources.cc  step_encrypt_resources.h  step_remove_encryption_data.cc  step_remove_encryption_data.h
src/wgt/step/filesystem/: step_copy_preview_icons.cc  step_copy_preview_icons.h  step_create_symbolic_link.cc  step_create_symbolic_link.h  step_wgt_patch_icons.cc  step_wgt_patch_icons.h  step_wgt_patch_storage_directories.cc  step_wgt_patch_storage_directories.h  step_wgt_prepare_package_directory.cc  step_wgt_prepare_package_directory.h  step_wgt_resource_directory.cc  step_wgt_resource_directory.h  step_wgt_update_package_directory.cc  step_wgt_update_package_directory.h
src/wgt/step/pkgmgr/: step_generate_xml.cc  step_generate_xml.h
src/wgt/step/rds/: step_rds_modify.cc  step_rds_modify.h  step_rds_parse.cc  step_rds_parse.h  step_wgt_rds_modify.cc  step_wgt_rds_modify.h
src/wgt/step/security/: step_add_default_privileges.cc  step_add_default_privileges.h  step_check_extension_privileges.cc  step_check_extension_privileges.h  step_check_settings_level.cc  step_check_settings_level.h  step_check_wgt_background_category.cc  step_check_wgt_background_category.h  step_check_wgt_ime_privilege.cc  step_check_wgt_ime_privilege.h  step_check_wgt_notification_category.cc  step_check_wgt_notification_category.h  step_direct_manifest_check_signature.cc  step_direct_manifest_check_signature.h
src/wgt_backend/: CMakeLists.txt  wgt_backend.cc
(+30 files in other folders)
